--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "turbolabit/php-encryptor",
     "description": "The easiest tool to encrypt/decrypt strings and arrays in PHP",
+    "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
         {
