--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,29 @@
 {
-    "name": "turbolabit/php-encryptor",
-    "description": "The easiest tool to encrypt/decrypt strings and arrays in PHP",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Zane",
-            "email": "info@turbolab.it"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "TurboLabIt\\Encryptor\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "TurboLabIt\\Encryptor\\tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=7.4 || >=8.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
+  "name": "turbolabit/php-encryptor",
+  "description": "A single, zero-config service with encrypt() and decrypt() methods to safely share or expose confidential data",
+  "type": "symfony-bundle",
+  "license": "CC BY-SA 4.0",
+  "authors": [
+    {
+      "name": "Zane",
+      "email": "info@turbolab.it"
     }
+  ],
+  "require": {
+    "php": "^8.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "TurboLabIt\\Encryptor\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "TurboLabIt\\Encryptor\\Tests\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "symfony/framework-bundle": "@stable",
+    "phpunit/phpunit": "@stable"
+  }
 }
