--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,3 +4,8 @@ services:
       public: true
       arguments:
         $secretKey: '%env(APP_SECRET)%'
+
+    TurboLabIt\Encryptor\Command\EncryptCommand:
+        autowire: true
+        tags:
+            - { name: 'console.command' }
